# mole

./: .gitignore  .gitmodules  BridgeDLL.swf  ClientCallDLL.swf  ClientCommonDLL.swf  README.md  bridge.py  build.bat  build.ps1  build.py  client.py  daily_auto.py  dict.py  env.py  login.py  manifest  mole.py  package.bat  pyproject.toml  requirements.txt  run.vbs  socket_bridge.py  test.py  ui_advance.py  ui_advance.ui  ui_main.py  ui_main.ui  ui_send.py  ui_send.ui  version.json  打包.bat
.github/workflows/: build.yml
