[project]
name = "mole"
version = "1.10.8"
description = """
- 修复：修复非 100% 缩放时，Flash 游戏区域显示异常的问题
- 优化：启动时自动检查新版本，如果有新版本则提示更新，其他情况不显示消息，只有手动点击检查更新才显示其他情况的提示消息
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi~=2.1.0",
    "nuitka~=4.1.3",
    "packaging~=26.2",
    "py3amf~=0.9.1",
    "pypinyin~=0.55.0",
    "pyside6~=6.11.1",
    "requests~=2.34.2",
    "zstandard~=0.25",
]
