[project]
name = "mole"
version = "1.10.9"
description = """
- 修复：修复刷新游戏后，由于未清理命令桥和旧 swf 和之间的僵尸 socket 连接，导致连上新的后，命令桥和多个 swf 连接，从而发送的命令部分被僵尸 socket 消费从而没有执行游戏内命令的问题，现在连接到新 swf 后会自动清理旧连接
- 优化：现在使用 QT 的 Fusion 样式，从而解决 Win10 和 Win11 渲染差异导致的界面元素有像素错位的问题
- 优化：微调界面所有控件的位置，以适配 Fusion 样式渲染效果
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi~=2.1.0",
    "nuitka~=4.1.3",
    "packaging~=26.2",
    "py3amf~=0.9.1",
    "pypinyin~=0.55.0",
    "pyside6~=6.11.1",
    "requests~=2.34.2",
    "zstandard~=0.25",
]
