[project]
name = "mole"
version = "1.10.10"
description = """
- 优化：餐厅现在支持自动做菜挂着一个账号然后登录另一个账号游玩
- 修复：修复如果自动做菜启动后登录别的账号，餐厅数据信息刷新导致做菜任务异常的问题，现在做菜任务未启动或者做菜任务的账号和当前账号一致时才会刷新餐厅数据
- 修复：修复如果手动让拉姆采集物品时，会弹窗报错的问题，现在只有拉姆变身值任务启动时才会统计成功获得的物品信息
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi~=2.1.0",
    "nuitka~=4.1.3",
    "packaging~=26.2",
    "py3amf~=0.9.1",
    "pypinyin~=0.55.0",
    "pyside6~=6.11.1",
    "requests~=2.34.2",
    "zstandard~=0.25",
]
